name:                snaplet-jwt
version:             0.1.0
synopsis:            A snaplet for using JSON Web Tokens
-- description:
homepage:            https://gitlab.com/b0d0nne11/snaplet-jwt
license:             Apache-2.0
license-file:        LICENSE
author:              Brendan ODonnell
maintainer:          Brendan ODonnell <brendan.james.odonnell@gmail.com>
-- copyright:
category:            Web, Snap
build-type:          Simple
cabal-version:       >=1.10

data-files:
  devel.cfg
  resources/header.json
  resources/keys/*.json

extra-source-files:
  Changelog.md

Library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall

  exposed-modules:
    Snap.Snaplet.JWT

  other-modules:
    Paths_snaplet_jwt

  -- other-extensions:

  build-depends:
    base,
    jose == 0.4.0.3,
    lens,
    transformers,
    snap,
    snap-core,
    aeson,
    bytestring,
    text,
    directory,
    filepath,
    configurator,
    unordered-containers,
    time,
    mtl,
    cryptonite,
    uuid,
    data-default-class
